--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "mysite",
   "version": "0.1.0",
+  "homepage": "http://gagandeep95.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-rotating-text": "^1.4.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -30,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-images": "^1.1.7",
+    "react-photo-gallery": "^8.0.0",
+    "react-social-icons": "^4.1.0"
   }
 }
